// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Generic Carousel Rendering should render a basic item 1`] = `
<section
  aria-label="Generic Carousel"
  aria-roledescription="carousel"
  className="gc-carousel"
  data-active={0}
>
  <div
    className="gc-inner"
  >
    <fieldset
      aria-label="Carousel controls"
      className="gc-controls"
    >
      <legend
        className="gc-legend"
      >
        Carousel controls
      </legend>
      <button
        aria-controls="abcd-gc-items"
        aria-label="Previous"
        className="gc-control gc-control-prev"
        onClick={[Function]}
      >
        Prev
      </button>
      <button
        aria-controls="abcd-gc-items"
        aria-label="Next"
        className="gc-control gc-control-next"
        onClick={[Function]}
      >
        Next
      </button>
    </fieldset>
    <div
      className="gc-items"
      id="abcd-gc-items"
    >
      <div
        aria-label="Item 1 of 2"
        aria-roledescription="slide"
        className="gc-item gc-item--active"
        key="1"
        role="group"
      >
        <div
          className="gc-image"
        >
          <a
            className="gc-a"
            href="src-1.jpg"
            onFocus={[Function]}
          >
            <img
              alt="title 1"
              className="gc-img"
              src="src-1.jpg"
            />
          </a>
        </div>
        <div
          className="gc-item-number"
        />
        <h3
          className="gc-item-title"
        >
          title 1
        </h3>
      </div>
      <div
        aria-label="Item 2 of 2"
        aria-roledescription="slide"
        className="gc-item "
        key="2"
        role="group"
      >
        <div
          className="gc-image"
        >
          <a
            className="gc-a"
            href="src-2.jpg"
            onFocus={[Function]}
          >
            <img
              alt="title 2"
              className="gc-img"
              src="src-2.jpg"
            />
          </a>
        </div>
        <div
          className="gc-item-number"
        />
        <h3
          className="gc-item-title"
        >
          title 2
        </h3>
      </div>
    </div>
  </div>
</section>
`;

exports[`Generic Carousel Rendering should show a message if there are no images 1`] = `
<section
  aria-label="Generic Carousel"
  aria-roledescription="carousel"
  className="gc-carousel"
  data-active={0}
>
  <div
    className="gc-inner"
  >
    <fieldset
      aria-label="Carousel controls"
      className="gc-controls"
    >
      <legend
        className="gc-legend"
      >
        Carousel controls
      </legend>
      <button
        aria-controls="abcd-gc-items"
        aria-label="Previous"
        className="gc-control gc-control-prev"
        onClick={[Function]}
      >
        Prev
      </button>
      <button
        aria-controls="abcd-gc-items"
        aria-label="Next"
        className="gc-control gc-control-next"
        onClick={[Function]}
      >
        Next
      </button>
    </fieldset>
    <div
      className="gc-items"
      id="abcd-gc-items"
    >
      <div
        className="gc-empty"
      >
        No images to show
      </div>
    </div>
  </div>
</section>
`;

exports[`Generic Carousel Rendering should show a notification if loading 1`] = `
<section
  aria-label="Generic Carousel"
  aria-roledescription="carousel"
  className="gc-carousel"
  data-active={0}
>
  <div
    className="gc-inner"
  >
    <fieldset
      aria-label="Carousel controls"
      className="gc-controls"
    >
      <legend
        className="gc-legend"
      >
        Carousel controls
      </legend>
      <button
        aria-controls="abcd-gc-items"
        aria-label="Previous"
        className="gc-control gc-control-prev"
        onClick={[Function]}
      >
        Prev
      </button>
      <button
        aria-controls="abcd-gc-items"
        aria-label="Next"
        className="gc-control gc-control-next"
        onClick={[Function]}
      >
        Next
      </button>
    </fieldset>
    <div
      className="gc-items"
      id="abcd-gc-items"
    >
      <div
        className="gc-loading"
      >
        Loading
      </div>
    </div>
  </div>
</section>
`;
